  * Use XDG-defined cache home directory for cddb cache.
  * Use XDG-defined cache home directory for win32codecs fake registry.
  * Use XDG-defined data directories to look up fonts files both while using
    FreeType2 and the standard bitmap fonts for OSD.
  * Replace internal libdts 0.0.2 with libdca 0.0.5, and contextually move it
    to contrib/libdca to separate from xine's own code.

xine-lib (1.1.7) (unreleased)
  * Support libdca (new name for libdts) by shuffling around the dts.h file.
  * Add support for MDHD version 1 atom in demux_qt. [bug #1679398]
  * Handle single-quoted attribute values in XML.
  * Fix default paths for RealPlayer libraries (broken in 1.1.5).
    [Bug 1707526]
  * Fix proxy usage when the hostnames cannot be resolved. Thanks to Jeff
    Mitchell for reporting and testing the fix.
  * Avoid zero-sized frames when demuxing MPEG PES.
  * Improved MPEG2 detection and optimised processing.
  * Extract AFD information (commonly used in UK DVB-T) from the MPEG stream.
  * Ensure that the ffmpeg video image size is properly initialised.
  * Allow XxMC to switch back to software decoding; don't deinterlace if it's
    not needed for any given frame.
  * Document dvba: MRLs (ATSC with full tuning info).

xine-lib (1.1.6)
  * Split the DirectFB plugin into X11 and non-X versions.
  * Improve the Mac OS X video output plugin. Thanks to Matt Messier.
  * Fixed the XcbXv plugin - an empty plugin would be built if "old" Xv
    isn't detected.
  * Reworked the channels.conf file handling in the DVB plugin. Previously,
    with junk content, the plugin could potentially consume lots of memory
    (possibly causing a local DoS). Also, a few small memory leaks have been
    eliminated.
  * Fixed a CDDA-related crash and a DVD-related hang, both caused by the
    same change in 1.1.5.

xine-lib (1.1.5)
  * Security fixes:
    - Fix heap overflow in DMO loader. (CVE-2007-1246) [bug #1676925]
      Thanks to Kees Cook for reporting.