@@ -19,6 +19,9 @@ xine-lib (1.1.90) (Unreleased)
     FreeType2 and the standard bitmap fonts for OSD.
   * Replace internal libdts 0.0.2 with libdca 0.0.5, and contextually move it
     to contrib/libdca to separate from xine's own code.
+  * Add another message code to allow for auth prompts. Previously, it was
+    not possible to distinguish between 401 Authentication Requried and 403
+    Forbidden.
 
 xine-lib (1.1.7) (unreleased)
   * Support libdca (new name for libdts) by shuffling around the dts.h file.
